Added the fetch request in order to pull the data from the api when the home page loads.

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,11 @@
   margin: 40px auto;
   padding: 20px;
 }
+.blog-preview h2:hover {
+  color: #f1356d
+}
+.blog-preview{
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
